--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "author": "Mimi",
   "license": "GPL3.0",
   "devDependencies": {
-    "electron": "^1.8.4",
     "async": "^2.6.0",
-    "request": "^2.85.0",
+    "electron": "^1.8.6",
+    "mime": "^2.3.1",
     "progress": "^2.0.0",
-    "mime": "^2.3.1"
+    "request": "^2.85.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
